# ProyectoSO2_2022_visible

./: CMakeLists.txt  README.md  clients_common.c  clients_common.h  io_ops_common.c  io_ops_common.h  server_tp2.c  server_tp2.h  tcp4_client.c  tcp6_client.c  test_client.c  test_server.c  unix_client.c
